# GPU_ArchComp

./: .gitignore  README.md
Ex1/: CMakeLists.txt  Readme.md  evaluation.ipynb  results.csv
Ex1/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
Ex1/output/: random1_1920x1080.csv  random1_3840x2160.csv  random1_640x426.csv  random256_1920x1080.csv  random256_3840x2160.csv  random256_640x426.csv  random2_1920x1080.csv  random2_3840x2160.csv  random2_640x426.csv  random_3840x2160.csv  random_640x426.csv  real_image.csv  results_1920x1080.csv  results_3840x2160.csv  results_800x600.csv  sample_1280x853.csv  sample_1920x1280.csv  sample_5184x3456.csv  sample_640x426.csv  uniform_1920x1080.csv  uniform_3840x2160.csv  uniform_640x426.csv
Ex1/src/: CMakeLists.txt  input.hpp  main.cu  results.csv  test.cpp  timer.hpp
Ex2/: .gitignore  CMakeLists.txt  Kruskal_serial.ipynb  Readme.md
Ex2/.old/: filter-kruskal.ipynb  generate.ipynb  generate_old.py
Ex2/include/: benchmarker.hpp  common.hpp  edgelist.hpp  filter.hpp  graph.hpp  inclusive_scan_kernel.hpp  kruskal.hpp  misc.hpp  partition.hpp  sort.hpp  union_find.hpp
Ex2/input_data/: 100_0.2_1_100.csv  10_0.2_1_100.csv  20_0.2_1_100.csv  barabasi_100000_1000_mst_gt.csv  barabasi_100000_100_mst_gt.csv  barabasi_100000_10_mst_gt.csv  barabasi_10000_10.csv  barabasi_10000_100.csv  barabasi_10000_100_mst_gt.csv  barabasi_10000_10_mst_gt.csv  barabasi_100_3.csv  barabasi_100_3_mst_gt.csv  barabasi_200_3.csv  barabasi_200_3_mst_gt.csv  barabasi_25000_10.csv  barabasi_25000_10_mst_gt.csv  barabasi_50000_10.csv  barabasi_50000_10_mst_gt.csv  barabasi_dense_1000_800_mst_gt.csv  barabasi_dense_2000_1800_mst_gt.csv  barabasi_dense_4000_3600_mst_gt.csv  barabasi_sparse_100000_10_mst_gt.csv  barabasi_sparse_10000_10.csv  barabasi_sparse_10000_10_mst_gt.csv  barabasi_sparse_1000_10.csv  barabasi_sparse_1000_10_mst_gt.csv  example.csv  example.txt  example_mst_gt.csv  mst_gt_100_0.2_1_100.csv  mst_gt_10_0.2_1_100.csv  mst_gt_20_0.2_1_100.csv
Ex2/scripts/: common.py  filter-kruskal.ipynb  filter_kruskal.py  generate.py  generate_graphs.ipynb  generate_kruskal_demo.ipynb  kruskal_benchmark.ipynb  run_kruskal.sh
Ex2/src/: CMakeLists.txt  Graph.hpp  benchmarker.cpp  common.hpp  edgelist.cu  filter.cu  gpu_sorting.cu  graph.cu  graph.hpp  kruskal.cu  kruskal.hpp  main.cu  partition.cu  partition_array.cu  simonstuff.hpp  sort.cu  timer.hpp  union_find.cu
Ex2/test/: CMakeLists.txt  test_calculateMST.py  test_edgeList.cu  test_filter.cu  test_partition.cu  test_sort.cu
